nav fixed (z-index added)

--- a/documentation/assets/css/screen.css
+++ b/documentation/assets/css/screen.css
@@ -59,5 +59,6 @@ nav {
 @media screen and (min-width: 1280px) {
   nav {
     position: fixed;
+    z-index: 1049;
   }
 }
